Fixed bug that caused a 3px black bar to appear on photos when the cropped touched the bottom

--- a/themes/photo_frame/css/photo_frame.css
+++ b/themes/photo_frame/css/photo_frame.css
@@ -406,6 +406,8 @@ a.photo-frame-progress-cancel {
 
 .photo-frame-image img {
 	max-width: none;
+	width: 100%;
+	display: block;
 }
 
 
